# automatons

./: Cargo.toml  README.md
src/: automaton.rs  error.rs  lib.rs  token.rs
src/automatons/: camila.rs  erika.rs  katty.rs  mod.rs  the_girl_of_the_white_dog.rs
